# python-repository-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
package_name/: example.py
tests/: test_example.py
