[tool.poetry]
name = "package-name"
version = "0.1.0"
description = "Create a new python repository with useful tools already set up"
license = "Unlicense"
authors = ["Author Name <author@orgname.org>"]
readme = "README.md"
packages = [{include = "package_name"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.8.0"}
isort = "^5.10.1"
pre-commit = "^2.20.0"
prospector = {extras = ["with_bandit", "with_vulture"], version = "^1.7.7"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
